--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modularus",
+  "name": "@scribe-systems/modularus",
   "version": "1.2.9",
   "description": "Modularus - interface for Scribe modules",
   "scripts": {
@@ -13,7 +13,9 @@
   },
   "keywords": [
     "Modularus",
-    "Skryba-2"
+    "Skryba-2",
+    "scribe",
+    "scribe-systems"
   ],
   "author": "Scribe Systems",
   "license": "UNLICENSED",
