--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@scribe-systems/modularus",
-  "version": "1.2.15",
+  "version": "1.2.16",
   "description": "Modularus - interface for Scribe modules",
   "scripts": {
     "build": "tsc"
   },
-  "types": "lib/index.d.ts",
-  "main": "lib/index.d.ts",
+  "main": "lib/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scribe-systems-sp/modularus.git"
